--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ Although you can use them, for a more unique website, replace these images with 
 				</div>
             </a>
         </div>
-    </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.container-fluid -->
 
 	<!-- Content 3 -->
      <section class="content content-3">
